# colcon2deb

./: .envrc  .gitmodules  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  RELEASE.md  colcon2deb.py  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  getting-started.md  introduction.md
book/src/advanced/: debian-overrides.md  (+1 more)
colcon2deb/: __init__.py  cli.py  compiler.py  config.py  debian.py  dependencies.py  main.py  packager.py  prepare.py  ui.py  utils.py
colcon2deb/helper/: build-src.sh  build_deb.py  copy-src.sh  create-package-list.sh  create-rosdep-list.sh  entry.sh  events.py  generate-debian-dir.sh  generate-rosdep-commands.sh  generate_debian_dir.py  install-deps.sh  main.py  main.sh  prepare.sh
doc/: debian-overrides-changelog.md
examples/: .gitignore
examples/autoware-0.45.1-amd64/: README.md  build.sh  justfile
examples/autoware-1.5.0-amd64/: Dockerfile  config.yaml  justfile  rosdep-packages.txt
examples/autoware-2025.02-amd64/: Dockerfile  README.md  build.sh  config.yaml  justfile
examples/custom-example/: .gitignore  Dockerfile  justfile
examples/simple-example/: Dockerfile  config.yaml  justfile
examples/test-workspace/: README.md  build.sh
helper/: build-deb.sh  build-src.sh  generate-debian-dir.sh  main.sh
makedeb/: .gitignore  PKGBUILD  colcon2deb
src/autoware_debian_packager/: compiler.py  debian.py  dependencies.py  display.py  main.py  packager.py  prepare.py  utils.py
templates/debian/: rules.em
tests/: test_python_modules.py  test_remote_dockerfile.py
(+39 files in other folders)
